@@ -1,0 +1,1 @@
+select * from lineitem group by l_orderkey;
