@@ -1,0 +1,15 @@
+SELECT
+  CASE
+    WHEN PERIOD < 0 THEN 'N/A'
+    WHEN PERIOD <= INTERVAL '12h' THEN 'C0'
+    WHEN PERIOD <= INTERVAL '24h' THEN 'C1'
+    WHEN PERIOD <= INTERVAL '48h' THEN 'C2'
+    ELSE 'XX'
+  END AS P
+FROM (
+  SELECT
+    INTERVAL '12h' as PERIOD,
+    L_ORDERKEY
+  FROM
+    LINEITEM
+) T;
