@@ -1,0 +1,1 @@
+select * from lineitem limit l_orderkey;
