@@ -1,0 +1,1 @@
+select l_orderkey from lineitem group by l_orderkey;
